fixed aligning of username in upper right corner and color

--- a/public/stylesheets/user-logged-in.css
+++ b/public/stylesheets/user-logged-in.css
@@ -16,6 +16,8 @@
 
 .welcome-sign {
   width: 100px;
+  align-self: center;
+  color: white;
 }
 
 .nav-links {
